--- a/index.html
+++ b/index.html
@@ -1,12 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/styles.css" />
+
+    <title>My music website</title>
+  </head>
+
+  <body>
+
+    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top">
+      <a href="#" class="navbar-brand">Music</a>
+      <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navLinks">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="http://127.0.0.1:5500/index.html" class="nav-link">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://untold.com/" class="nav-link">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://untold.com/tickets" class="nav-link">TICKETS</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+            <h1 class="">TECHNO<span>/</span>IS<span>/</span>LIFE</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="/images/EJiVqw.jpeg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="/images/Solomun-Contact-Information.jpeg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>Solomun. Top Tracks</h2>
+              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EIWuZJCqHNImW?utm_source=generator" width="250" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+              <p class="lead">
+                <ol>
+                  <li>Around - Solomun Vox. ...</li>
+<li>The Way Back.</li>
+<li>Tuk Tuk (feat. ÄTNA) ...</li>
+<li>Friends.</li>
+<li>Late Night - Solomun Remix. Foals, Solomun.</li>
+<li>Eating Hooks - Siriusmo Remix - Solomun Edit. Moderat, Siriusmo, Solomun.</li>
+<li>Something We All Adore - Original Mix.
+<li>The Center Will Not Hold. Somebody's Story.</li>
+                </ol>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     
-</body>
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>  Deborah de Luca</h2>
+              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DXdtTK5Bo0anL?utm_source=generator" width="250" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+              <p class="lead">
+                <ol>
+               <li>I Go Out - 2020 Rework.</li> 
+<li>Hey Britney - Power Mix.</li>
+<li>Oh Ohh.</li>
+<li>Dori Me.</li>
+<li>19 calls.</li>
+<li>Be My.</li>
+<li>Emin.</li>
+<li>Squid.</li></ol>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="/images/Deborah-De-Luca-header-1-1200x900.jpeg" alt="" class="img-fluid" />
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img src="/images/paul.jpeg" alt="" class="img-fluid" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+              <h2>PAUL KALKBRENNER</h2>
+              <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E4BZEVEq9y7AU?utm_source=generator" width="250" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+              <p class="lead">
+                <ol>
+                  <li>No Goodbye.</li>
+<li>Parachute.</li>
+<li>Aaron.</li>
+<li>Feed Your Head.</li>
+<li>Cloud Rider.</li>
+<li>Azure.</li>
+<li>Dockyard.</li>
+<li>Feed Your Head - Radio Edit.</li>
+                </ol>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
