--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-fluid" src="/images/EJiVqw.jpeg" alt="" />
+          <a href="https://burningman.org/"><img class="img-fluid" src="/images/EJiVqw.jpeg" alt="" /></a>
         </div>
       </div>
     </section>
@@ -67,7 +67,7 @@
     <section class="container-fluid px-0">
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
-          <img src="/images/Solomun-Contact-Information.jpeg" alt="" class="img-fluid" />
+          <img  src="/images/Solomun-Contact-Information.jpeg" alt="" class="img-fluid" />
         </div>
         <div class="col-md-6 text-center order-1 order-md-2">
           <div class="row justify-content-center">
